fix for misalignment

--- a/styles/scss/layout/_layout.scss
+++ b/styles/scss/layout/_layout.scss
@@ -1,4 +1,5 @@
 body {
 	padding: 2vh 0 5vh;
 	background: tint(pink, 20%);
+	overflow: hidden;
 }
